DMC-415 - DMC-415 - [API] Configuration of available Auth Methods - Implement dynamic authentication provider and email domain configuration, and local standalone mode.
Implemented via automated workflow (Run: 17191580403)
Co-authored-by: CLI Agent <cli-agent@dmtools>